--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ jinja2==3.1.2
 openai==1.97.0
 python-multipart==0.0.6
 aiofiles==23.2.1
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+pdfplumber==0.11.7
+tabula-py==2.10.0 
