--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "api/main.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "10mb"
+      }
     }
   ],
   "routes": [
@@ -12,6 +15,11 @@
       "dest": "api/main.py"
     }
   ],
+  "functions": {
+    "api/main.py": {
+      "maxDuration": 30
+    }
+  },
   "env": {
     "PYTHONPATH": "."
   }
