--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
   "builds": [
     {
       "src": "api/main.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "10mb"
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
@@ -14,13 +11,5 @@
       "src": "/(.*)",
       "dest": "api/main.py"
     }
-  ],
-  "functions": {
-    "api/main.py": {
-      "maxDuration": 30
-    }
-  },
-  "env": {
-    "PYTHONPATH": "."
-  }
+  ]
 } 
