--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,17 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/main.py"
+    },
+    {
       "src": "/(.*)",
       "dest": "/api/main.py"
     }
-  ]
+  ],
+  "functions": {
+    "api/main.py": {
+      "runtime": "python3.9"
+    }
+  }
 } 
