Deshabilitar cache en Vercel: agregar headers no-cache para forzar builds frescos

--- a/vercel.json
+++ b/vercel.json
@@ -20,5 +20,24 @@
     "api/main.py": {
       "runtime": "python3.9"
     }
-  }
+  },
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        },
+        {
+          "key": "Pragma",
+          "value": "no-cache"
+        },
+        {
+          "key": "Expires",
+          "value": "0"
+        }
+      ]
+    }
+  ]
 } 
