Deshabilitar ISR: agregar rewrites para forzar builds dinámicos

--- a/vercel.json
+++ b/vercel.json
@@ -39,5 +39,11 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/main.py"
+    }
   ]
 } 
