FIX JSON: Simplificar vercel.json para forzar despliegue correcto

--- a/vercel.json
+++ b/vercel.json
@@ -4,21 +4,9 @@
     {
       "src": "api/main.py",
       "use": "@vercel/python"
-    },
-    {
-      "src": "api/main_v2.py",
-      "use": "@vercel/python"
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/main.py"
-    },
-    {
-      "src": "/test-rentabilidad",
-      "dest": "/api/main_v2.py"
-    },
     {
       "src": "/(.*)",
       "dest": "/api/main.py"
@@ -29,23 +17,10 @@
       "runtime": "python3.9"
     }
   },
-  "headers": [
+  "rewrites": [
     {
       "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "no-cache, no-store, must-revalidate"
-        },
-        {
-          "key": "Pragma",
-          "value": "no-cache"
-        },
-        {
-          "key": "Expires",
-          "value": "0"
-        }
-      ]
+      "destination": "/api/main.py"
     }
   ]
 } 
