--- a/env.example
+++ b/env.example
@@ -1,19 +1,40 @@
-# Configuración del Backend Acubat
+# Configuración de la aplicación
+APP_NAME=AcuBat Pricing Platform
+DEBUG=true
+VERSION=1.0.0
+ENV=development
 
-# OpenAI API Key (opcional - para funciones de IA)
-OPENAI_API_KEY=tu_clave_de_openai_aqui
+# Base de datos PostgreSQL
+DATABASE_URL=postgresql://acubat_user:acubat_password@localhost:5432/acubat_pricing
 
-# Configuración de la base de datos
-DATABASE_URL=sqlite:///./acubat.db
+# Seguridad
+SECRET_KEY=your-secret-key-here-change-in-production
+API_SECRET=your-api-secret-here
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Configuración del servidor
-DEBUG=True
-HOST=0.0.0.0
-PORT=8000
+# CORS
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000
 
-# Configuración de logging
+# Almacenamiento S3
+S3_ENDPOINT=https://s3.amazonaws.com
+S3_ACCESS_KEY=your-access-key
+S3_SECRET_KEY=your-secret-key
+S3_BUCKET=acubat-pricing
+S3_SECURE=true
+
+# API Keys
+API_KEY_HEADER=x-api-key
+API_KEY_PREFIX=acubat_
+
+# Límites
+MAX_FILE_SIZE=52428800
+MAX_UPLOAD_FILES=10
+
+# Logging
 LOG_LEVEL=INFO
 
-# Configuración de archivos
-UPLOAD_DIR=data/
-MAX_FILE_SIZE=10485760  # 10MB 
+# QA Gates
+QA_GLOBAL_THRESHOLD=0.08
+QA_SKU_THRESHOLD=0.15
+AUTO_PUBLISH=false
