--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,38 @@
+# FastAPI y servidor
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+
+# Base de datos
+sqlalchemy==2.0.23
+alembic==1.12.1
+psycopg2-binary==2.9.9
+
+# Validación y configuración
+pydantic==2.5.0
+pydantic-settings==2.1.0
+
+# Procesamiento de datos
 pandas==2.1.3
 openpyxl==3.1.2
 xlrd==2.0.1
-jinja2==3.1.2
-openai==1.97.0
-python-multipart==0.0.6
-aiofiles==23.2.1
+
+# Almacenamiento
+boto3==1.34.0
+minio==7.2.0
+
+# Utilidades
+orjson==3.9.10
 python-dotenv==1.0.0
-# PDF conversion (commented out for Vercel size limit)
-# pdfplumber==0.11.7
-# tabula-py==2.10.0 
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
+
+# Desarrollo
+black==23.11.0
+isort==5.12.0
+flake8==6.1.0
