--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
   "env": {
-    "NEXT_PUBLIC_API_BASE_URL": "@next_public_api_base_url",
-    "NEXT_PUBLIC_API_KEY": "@next_public_api_key"
+    "NEXT_PUBLIC_API_BASE_URL": "https://acubat-pricing-backend.railway.app/api/v1",
+    "NEXT_PUBLIC_API_KEY": "dev-secret"
   },
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
