--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
