--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,8 +18,7 @@ openpyxl==3.1.2
 xlrd==2.0.1
 
 # Almacenamiento
-boto3==1.34.0
-minio==7.2.0
+# Eliminados porque ahora usamos almacenamiento local en Railway Volumes
 
 # Utilidades
 orjson==3.9.10
